# rebase-cookiecutter-data-science

./: Makefile  README.md  pyproject.toml  setup.cfg  test.py
docs/scripts/: configuration-table.py  generate-termynal.py
hooks/: post_gen_project.py
rbds/: __main__.py  monkey_patch.py
tests/: conftest.py
