[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "rbds"

[project]
name = "rbds"
version = "0.1.2"
description = "A library for cookiecutter data science with rebase tools"
authors = [
  { name = "rebase.energy", email = "info@rebase.energy" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["cookiecutter", "data science", "python"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

requires-python = ">=3.8"
dependencies = [
  "click",
  "cookiecutter",
]

[project.scripts]
rbds = "rbds.__main__:main"

[project.urls]
homepage = "https://github.com/rebase-energy/rebase-cookiecutter-data-science"

[project.optional-dependencies]
dev = ["pytest", "black"]
