[metadata]
name = rbds
version = 1.0.0
description = MyProject with Package Name A
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # Add your dependencies here

[options.packages.find]
where = .

[flake8]
ignore = E203, E402, E501, W503
max-line-length = 99